#22 #39 setup test class for fxui